tests/ui/bad_syntax.stderr
error: marigold parse error: Parse error:  --> 1:5
         |
       1 | bad syntax
         |     ^---
         |
         = expected ".", "="
 --> ui/bad_syntax.rs:6:13
  |
6 |     let _ = marigold::m!(bad syntax);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `marigold::m` (in Nightly builds, run with -Z macro-backtrace for more info)
